--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -12,5 +12,5 @@ TimeOut = 10
 [Scene]
 DefaultFilePath = H:/Project_VS2019/NutEngine/Engine/Asset/girl.fbx
 DefaultAmbientLight = 0.2,0.2,0.2,0.2
-UseEnvLight = true
+UseEnvLight = false
 UseShadow = true
